fix home title spacing and buttons padding

--- a/assets/sass/partials/_home.scss
+++ b/assets/sass/partials/_home.scss
@@ -53,6 +53,10 @@
     @media screen and (min-width:768px) {
         margin-left:$su*2;
     }
+
+    @media screen and (min-width:1020px) {
+      margin-left:0;
+    }
   }
 }
 
@@ -61,10 +65,6 @@
 
   @media screen and (min-width:310px) and (max-width:360px) {
     font-size:24px;
-  }
-
-  @media screen and (min-width:768px) {
-    margin-left:$su*2;
   }
 }
 
