--- a/assets/sass/partials/_modules.scss
+++ b/assets/sass/partials/_modules.scss
@@ -20,7 +20,7 @@ a {
 
 .button {
     border:0.2em solid $red;
-    padding: 1em 1.2em;
+    padding: 1em 1.2em 0.8em 1.2em;
     color:white;
     background-repeat: no-repeat;
     background-size: 100% 0;
